# iso20022-rs

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  common.rs  generate-iso20022.sh  generate.sh
.github/workflows/: publish.yml
iso20022/: Cargo.toml
iso20022-acmt/: Cargo.toml
iso20022-acmt/src/: acmt_001_001_08.rs  acmt_002_001_08.rs  acmt_003_001_08.rs  acmt_005_001_06.rs  lib.rs  (+30 more)
iso20022-admi/: Cargo.toml
iso20022-admi/src/: admi_002_001_01.rs  admi_004_001_02.rs  admi_005_001_02.rs  admi_006_001_01.rs  admi_007_001_01.rs  admi_009_001_02.rs  admi_010_001_02.rs  admi_011_001_01.rs  admi_017_001_02.rs  admi_024_001_01.rs  lib.rs
iso20022-auth/: Cargo.toml
iso20022-camt/: Cargo.toml
iso20022-common/: Cargo.toml
iso20022-common/src/: lib.rs
iso20022-head/: Cargo.toml
iso20022-pacs/: Cargo.toml
iso20022-pain/: Cargo.toml
iso20022-reda/: Cargo.toml
iso20022-remt/: Cargo.toml
samples/: 01.json  01.xml  AllFields_BaseSample_2.xml  BaseSample.xml  BaseSample_camt.056.001.08.json  CBPRPlus_AdditionalInformation_02.json  CBPRPlus_AdditionalInformation_02.xml  CBPRPlus_AdditionalInformation_03.json  CBPRPlus_AdditionalInformation_03.xml  CBPR_AgentNamePostalAddressRule1_1.json  CBPR_AgentNamePostalAddressRule1_1.xml  CBPR_AgentNamePostalAddressRule_01.json  CBPR_AgentNamePostalAddressRule_01.xml  CBPR_AgentNamePostalAddressRule_02.json  CBPR_AgentNamePostalAddressRule_02.xml  CBPR_AgentNamePostalAddressRule_1_1.xml  CBPR_Agent_Name_Postal_Address_FormalRule.json  CBPR_Agent_Name_Postal_Address_FormalRule.xml  CBPR_CancellationIdentification_Rule_01.json  CBPR_CancellationIdentification_Rule_01.xml  CBPR_CancellationIdentification_Rule_02.json  CBPR_CancellationIdentification_Rule_02.xml  CBPR_CancellationIdentification_Rule_03.json  CBPR_CancellationIdentification_Rule_03.xml  CBPR_CaseIdentification_Rule_01.json  CBPR_CaseIdentification_Rule_01.xml  CBPR_CaseIdentification_Rule_02.json  CBPR_CaseIdentification_Rule_02.xml  CBPR_CaseIdentification_Rule_03.json  CBPR_CaseIdentification_Rule_03.xml  CBPR_Case_Identification_FormalRule.json  CBPR_DEBT_FormalRule_1.json  CBPR_DEBT_FormalRule_1.xml  CBPR_DEBT_FormalRule_2.json  CBPR_DEBT_FormalRule_2.xml  CBPR_InstructionforCreditorAgent1_01.json  CBPR_InstructionforCreditorAgent1_01.xml  CBPR_InstructionforCreditorAgent1_02.json  CBPR_InstructionforCreditorAgent1_02.xml  CBPR_InstructionforCreditorAgent1_1_.xml  (+144 more)
(+259 files in other folders)
